--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "cypress": "^12.6.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "empezar": "http-server",
+    "cypress-run": "cypress run",
+    "cypress-dev": "cypress open",
+    "test": "run-p start cypress-run",
+    "test-dev": "run-p start cypress-dev" 
   },
   "repository": {
     "type": "git",
